fix: deck is cramped in smaller viewports

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
 	--color-gray-200: oklch(0.8 0.0224 261.75);
 	--color-gray-100: oklch(0.9 0.0224 261.75);
 
-	--breakpoint-xs: 380px;
+	--breakpoint-xs: 440px;
 }
 
 @media (prefers-color-scheme: dark) {
